# decentralized-bridge-smart-contracts

./: .gitignore  .gitmodules  README.md  bun.lockb  hardhat.config.ts  package.json  todo.txt  tsconfig.json
aptos/: .env.example  .gitignore  Move.toml  README.md  bun.lockb  generate-abi.sh  package-lock.json  package.json  tsconfig.json
aptos/sources/: bride.move  bridge.move  mint.move
aptos/src/: bridge-client.ts  constants.ts
aptos/tests/: bridge.spec.ts
casper/: Cargo.toml  Makefile
casper/bridge/: Cargo.toml
casper/bridge/src/: endpoints.rs  entrypoints.rs  errors.rs  events.rs  external.rs  keys.rs  main.rs  structs.rs  utils.rs
casper/claim-nft/: Cargo.toml
casper/claim-nft/src/: errors.rs  main.rs
casper/common/: Cargo.toml
casper/common/src/: external.rs  lib.rs
casper/lock-nft/: Cargo.toml
casper/lock-nft/src/: errors.rs  main.rs
casper/storage/: Cargo.toml
casper/storage/src/: entrypoints.rs  errors.rs  external.rs  keys.rs  main.rs  structs.rs  utils.rs
contracts/: AddressUtilityLib.sol  Bridge.sol  BridgeStorage.sol  DummyERC20.sol  ERC1155Royalty.sol  ERC20Staking.sol  ERC721Royalty.sol  NFTCollectionDeployer.sol  NFTMinter1155Contract.sol  NFTMinter721Contract.sol  NFTStorageDeployer.sol  NFTStorageERC1155.sol  NFTStorageERC721.sol  NftStorageERC1155.sol  NftStorageERC721.sol  TestNFTerc721.sol  XpStaking.sol
contracts/interfaces/: IERC1155Royalty.sol  IERC721Royalty.sol  INFTStorageDeployer.sol  INFTStorageERC1155.sol  INFTStorageERC721.sol
cosmos/: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  bun.lockb  deploy.ts  optimize.sh  package.json  storage.json
cosmos/bridge/: Cargo.toml
cosmos/bridge/examples/: schema.rs
cosmos/bridge/src/: contract.rs  events.rs  lib.rs  msg.rs  state.rs  structs.rs  tests.rs
cosmos/collection_deployer/: .gitignore  Cargo.toml
cosmos/collection_deployer/examples/: schema.rs
cosmos/collection_deployer/src/: bridge_msg.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
cosmos/cosm_nft/: Cargo.toml
cosmos/cosm_nft/examples/: schema.rs
cosmos/cosm_nft/src/: constants.rs  contract.rs  init.rs  lib.rs  msg.rs  query.rs  reply.rs  royalty.rs  tests.rs
cosmos/nft_store/: Cargo.toml
cosmos/nft_store/examples/: schema.rs
cosmos/nft_store/src/: error.rs  lib.rs  msg.rs  state.rs  storage_deployer_msg.rs  tests.rs
cosmos/store_deployer/: Cargo.toml
cosmos/store_deployer/examples/: schema.rs
cosmos/store_deployer/src/: error.rs  lib.rs  msg.rs  state.rs  storage_info.rs  tests.rs
elrond/: .gitignore  Cargo.toml  deploy.sh  package.json
elrond/meta/: Cargo.toml
elrond/meta/src/: main.rs
elrond/src/: lib.rs  types.rs
elrond/tests/: index.test.ts
elrond/wasm/: Cargo.toml
elrond/wasm/src/: lib.rs
icp/: .gitignore  README.md  dfx.json  mops.toml  package.json  tsconfig.json
near/: .env.example  Cargo.toml  Makefile  README.md  bun.lockb  deploy-prod.sh  deploy.sh  nft-to-hex.ts  nft.hex.ts  package.json  sk-to-pk.ts
near/bridge/: Cargo.toml
near/bridge/src/: events.rs  external.rs  lib.rs  tests.rs  types.rs
near/bridge/tests/: helpers.rs  tests.rs
near/collection-factory/: Cargo.toml
near/collection-factory/src/: external.rs  lib.rs
near/collection-factory/tests/: test_basics.rs
near/nft/: Cargo.toml  README.md
near/nft/src/: approval.rs  events.rs  internal.rs  lib.rs  mint.rs  nft_core.rs  royalty.rs
near/storage/: Cargo.toml  README.md
near/storage-factory/: Cargo.toml
near/storage-factory/src/: external.rs  lib.rs
near/storage-factory/tests/: helper.rs
near/storage/src/: external.rs  lib.rs
near/storage/tests/: test_basics.rs
prodScripts/: deployBridgeStorage.ts  deployStaking.ts
scripts/: deployBridge.ts  deployBridgeStorage.ts  deployStaking.ts
secret/: Cargo.toml  Makefile  optimize.sh  run.sh
secret/bridge/: Cargo.toml  NOTICE
secret/bridge/examples/: schema.rs
secret/bridge/src/: collection_deployer_msg.rs  contract.rs  error.rs  events.rs  lib.rs  msg.rs  snip1155_msg.rs  snip721_msg.rs  state.rs  storage1155_msg.rs  storage721_msg.rs  storage_deployer_msg.rs  structs.rs
secret/bridge/tests/: contract.wasm  integration.ts
secret/collection-deployer/: Cargo.toml
secret/collection-deployer/examples/: schema.rs
secret/collection-deployer/src/: bridge_msg.rs  contract.rs  lib.rs  msg.rs  offspring_msg.rs  state.rs  structs.rs
secret/common/: Cargo.toml
secret/common/src/: lib.rs
secret/scripts/: code_id.json  package.json
secret/scripts/src/: deploy.ts
secret/snip1155/: Cargo.toml
secret/snip1155/examples/: schema.rs
secret/snip1155/src/: collection_deployer_msg.rs  handles.rs  lib.rs  msg.rs  queries.rs  reply.rs
secret/snip1155/src/unittest/: handletests.rs  querytests.rs  testhelpers.rs
secret/snip721/: Cargo.toml
secret/snip721/examples/: schema.rs
secret/snip721/src/: collection_deployer_msg.rs  contract.rs  lib.rs  msg.rs  reply.rs  state.rs
secret/storage-deployer/: Cargo.toml
secret/storage-deployer/examples/: schema.rs
secret/storage-deployer/src/: bridge_msg.rs  contract.rs  msg.rs  offspring_msg.rs  state.rs  structs.rs
secret/storage1155/: Cargo.toml
secret/storage1155/src/: contract.rs  lib.rs  msg.rs  snip1155_transfer_msg.rs  state.rs  storage_deployer_msg.rs  structs.rs
secret/storage721/: Cargo.toml
secret/storage721/src/: contract.rs  lib.rs  msg.rs  snip721_msg.rs  state.rs  storage_deployer_msg.rs  structs.rs
solana/: Anchor.toml  README.md  package.json  program-id.json
solana/docs/: metaplex-nft-standard.md  xp_bridge_src_lib.md
solana/programs/xp_bridge/: Cargo.toml
solana/programs/xp_bridge/src/: error.rs  lib.rs  state.rs
solana/src/: deploy_xpnft.ts  encode.ts  setup.ts
solana/tests/: anchor-nft-collection.ts  createLUT.ts  xp-bridge.ts
test/: Bridge.ts  BridgeStorage.ts  types.ts  utils.ts
tezos/: .env.example  .gitignore  Makefile  ligo.json  package.json  tsconfig.json
ton/: README.md  package-lock.json  package.json  tact.config.json
web3/: bun.lockb  deployBridges.bash  hardhat.config.ts  package.json
(+142 files in other folders)
