[package]
name = "bridge"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
ed25519-dalek = {version = "2.0.0", default-features = false}

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dependencies.multiversx-sc]
version = "0.44.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.44.0"
