[package]
name = "bridge"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
ed25519-dalek = {version = "2.0.0", default-features = false}

[dev-dependencies]
num-bigint = "0.4.5"
num-traits = "0.2.19"
hex = "0.4.3"

[dependencies.multiversx-sc]
version = "0.53.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.53.1"
