[workspace]
members = ["nft", "storage", "storage-factory", "collection-factory", "bridge", "deployment"]
resolver = "2"

[workspace.dependencies]

near-contract-standards = "5.1.0"
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

