[workspace]
members = [
    "bridge",
    "snip721",
    "snip1155",
    "collection-deployer",
    "storage-deployer",
    "storage721",
    "storage1155", "common",
]
resolver = "2"


[workspace.dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
secret-toolkit-storage = "0.10.0"
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.10.0", features = [
    "storage",
    "viewing-key",
    "utils",
    "crypto",
    "permit",
    "secret-toolkit-crypto"
] }
secret-toolkit-crypto = { version = "0.10.0", features = ["rand", "hash", "ecc-secp256k1"] }
rand = { version = "0.9.0-alpha.1", default-features = false }
getrandom = { version = "0.2.15" }
schemars = { version = "0.8.19" }
serde = { version = "1.0.200" }
thiserror = { version = "1.0.60" }

cosmwasm-schema = "2.0.2"
