[package]
name = "bridge"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.4.4"
casper-event-standard = { version = "0.2.0", default-features = false }
ed25519-dalek = { version = "1.0.1", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
hex = { version = "0.4.3", default-features = false }

[[bin]]
name = "bridge"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

