[package]
name = "bridge"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cosm_nft = { path = "../cosm_nft" }
collection_deployer = { path = "../collection_deployer" }
nft_store = { path = "../nft_store" }
store_deployer = { path = "../store_deployer" }
cw0 = { workspace = true }
serde-json-wasm = "1.0.1"
sha2 = "0.10.8"
serde_json = "1.0.114"


[dev-dependencies]
cw-multi-test = { workspace = true }
secp256k1 = { version = "0.28.2", features = ["std", "hashes", "rand"] }
anyhow = "*"
rand = { version = "*", features = ["getrandom"] }
