[package]
name = "collection_deployer"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw721-base = { workspace = true, features = ["library"] }
thiserror = { workspace = true }
cosm_nft = { path = "../cosm_nft" }
cw0 = { workspace = true }


[dev-dependencies]
cw-multi-test = { workspace = true }
