[package]
name = "store_deployer"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw0 = { workspace = true }
cw721-base = { workspace = true, features = ["library"] }
thiserror = { workspace = true }
nft_store = { path = "../nft_store" }

[dev-dependencies]
cw-multi-test = { workspace = true }
