[package]
name = "bridge"
version = "0.1.0"
authors = ["SecretTemplateExample"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
serde_json = "1.0.116"
serde-json-wasm = { version = "1.0.1" }
sha2 = "0.9"
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
secret-toolkit = { workspace = true, default-features = false, features = [
  "storage",
  "viewing-key",
  "crypto",
  "utils",
  "snip721"
]  }
snip1155 = {path = "../snip1155", default-features = false}
snip721= {path = "../snip721"}
storage-deployer = {path = "../storage-deployer"}
collection-deployer = {path = "../collection-deployer", default-features = false}
storage721 = {path = "../storage721"}
storage1155 = {path = "../storage1155"}
common = {path = "../common"}


# Uncomment these for some common extra tools
# cw-storage-plus = { version = "1.0.1", default-features = false }

# [patch.crates-io]
# uncomment this if you use cw-storage-plus
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }

