[package]
name = "collection-deployer"
version = "1.0.0"
authors = ["srdtrk <srdtrk@hotmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
contract = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
secret-toolkit = { workspace = true }
common = { path = "../common" }
snip721 = { path = "../snip721" }
snip1155 = { path = "../snip1155", default-features = false}

[dev-dependencies]
