[package]
name = "storage-deployer"
version = "1.0.0"
authors = ["srdtrk <srdtrk@hotmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
schemars = { version = "0.8.19" }
serde = { version = "1.0.200" }
thiserror = { version = "1.0.60" }
cosmwasm-schema = "2.0.2"
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.10.0", features = [
    "storage",
    "viewing-key",
    "utils",
    "crypto",
    "permit",
    "secret-toolkit-crypto"
] }

[dev-dependencies]
