[package]
name = "storage1155"
version = "0.1.0"
authors = ["SecretTemplateExample"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
schemars = { version = "0.8.19" }
serde = { version = "1.0.200" }
thiserror = { version = "1.0.60" }
cosmwasm-schema = "2.0.2"
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.10.0", features = [
    "storage",
    "viewing-key",
    "utils",
    "crypto",
    "permit",
    "secret-toolkit-crypto"
] }

# [patch.crates-io]
# uncomment this if you use cw-storage-plus
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }

[[bin]]
name = "schema"
required-features = ["schema"]
