[package]
name = "xp-bridge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "xp_bridge"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
spl-token = "3.3.0"
byteorder = "1.4.3"
anchor-lang = { version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.28.0",features = ["metadata"]}
mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }